--- a/.gitignore
+++ b/.gitignore
@@ -2,7 +2,4 @@
 node_modules/
 
 # generated source files
-public/bundle.js
-public/bundle.js.map
-public/styles.css
-public/styles.css.map
+public/dist/
