--- a/package.json
+++ b/package.json
@@ -5,7 +5,6 @@
   "author": "Kyle Price",
   "license": "MIT",
   "scripts": {
-    "serve": "live-server public/",
     "build:dev": "webpack",
     "build:prod": "webpack -p --env production",
     "dev-server": "webpack-dev-server",
@@ -22,12 +21,7 @@
     "babel-preset-env": "^1.7.0",
     "babel-preset-react": "^6.24.1",
     "css-loader": "^3.5.2",
-    "enzyme": "^3.11.0",
-    "enzyme-adapter-react-16": "^1.15.2",
-    "enzyme-to-json": "^3.4.4",
     "express": "^4.17.1",
-    "jest": "^23.6.0",
-    "live-server": "^1.2.1",
     "mini-css-extract-plugin": "^0.9.0",
     "moment": "^2.24.0",
     "node-sass": "^4.13.1",
@@ -40,16 +34,21 @@
     "react-modal": "^3.11.2",
     "react-redux": "^7.2.0",
     "react-router-dom": "^5.1.2",
-    "react-test-renderer": "^16.13.1",
     "redux": "^4.0.5",
     "sass-loader": "^8.0.2",
     "style-loader": "^1.1.4",
     "uuid": "^7.0.3",
     "validator": "^13.0.0",
-    "webpack": "^4.42.1",
-    "webpack-dev-server": "^3.10.3"
+    "webpack": "^4.42.1"
   },
   "devDependencies": {
-    "webpack-cli": "^3.3.11"
-  }
+    "enzyme": "^3.11.0",
+    "enzyme-adapter-react-16": "^1.15.2",
+    "enzyme-to-json": "^3.4.4",
+    "jest": "^23.6.0",
+    "react-test-renderer": "^16.13.1",
+    "webpack-cli": "^3.3.11",
+    "webpack-dev-server": "^3.10.3"
+  },
+  "repository": "git@github.com:milspect18/react-course-expensify.git"
 }
